parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr01.wacc
# type mismatch: int <- bool

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int i = true
end
